Bug 1120629 - Cache data directly on MP4Stream rather than relying on the media cache. r=roc